# platform-prebuilts-clang-host-linux-x86

./: .README.md.swp  .gitattributes  .gitignore  Android.bp  Android.mk  BINUTILS_KERNEL_DEPRECATION.md  BUILD.bazel  GCC_4_9_DEPRECATION.md  METADATA  OWNERS  README.md  RELEASE_NOTES.md  cc_toolchain_clang_version_test.bzl  cc_toolchain_config.bzl  cc_toolchain_constants.bzl  cc_toolchain_features.bzl  cc_toolchain_features_cfi_test.bzl  cc_toolchain_features_flag_order_test.bzl  cc_toolchain_features_linker_alignment_test.bzl  cc_toolchain_features_pack_relocation_test.bzl  cc_toolchain_features_sanitizer_blocklist_test.bzl  cc_toolchain_features_test.bzl  cc_toolchain_features_thinlto_test.bzl  cc_toolchain_features_ubsan_test.bzl  clang  clang-dev  clang-experimental  computed.bzl  diff  go.mod  libclang_rt.asan-aarch64.map.txt  libclang_rt.asan-arm.map.txt  libclang_rt.asan-i686.map.txt  libclang_rt.asan-mips.map.txt  libclang_rt.asan-mips64.map.txt  libclang_rt.asan-x86_64.map.txt  libclang_rt.asan.map.txt  project.config  rules.pl  update_map_files.sh
3.6/: update.sh
3.8/: Android.mk  NOTICE  README.md  build_profile_rt.sh  update-sanitizers.sh  update.sh
clang-2018q1/: AndroidVersion.txt
clang-2533378/: repo.prop
clang-2553823/: repo.prop
clang-2573703/: repo.prop
clang-3270076/: manifest_3270076.xml  repo.prop
clang-3624142/: manifest_3624142.xml  repo.prop
clang-3687826/: manifest_3687826.xml  repo.prop
clang-3959369/: manifest_3959369.xml  repo.prop
clang-3975894/: manifest_3975894.xml  repo.prop
clang-4011196/: repo.prop
clang-4052945/: manifest_4052945.xml  repo.prop
clang-4347831/: manifest_4347831.xml
clang-4363763/: manifest_4363763.xml
clang-4638473/: manifest_4638473.xml
clang-4666366/: manifest_4666366.xml
clang-4679364/: manifest_4679364.xml
clang-P75797071/: AndroidVersion.txt  clang_source_info.md
clang-dev/: repo.prop
clang-r333878/: AndroidVersion.txt  manifest_4965882.xml  manifest_4968900.xml
clang-r339409b/: manifest_5055498.xml
clang-r346389/: manifest_5145930.xml
clang-r349610/: manifest_5239796.xml
clang-r353983/: manifest_5349473.xml
clang-r353983d/: manifest_5655053.xml
clang-r365631b/: manifest_5869931.xml
clang-r370808/: manifest_5997399.xml
clang-r377782/: AndroidVersion.txt  manifest_6186311.xml  manifest_6188072.xml  manifest_P11723931.xml  manifest_P11824869.xml  manifest_P11848175.xml
clang-r377782c/: manifest_6261310.xml  manifest_6273454.xml
clang-r383902/: manifest_6383294.xml  manifest_6417285.xml
clang-r399163/: manifest_6716542.xml  manifest_6760170.xml
clang-r400163/: AndroidVersion.txt  manifest_6842337.xml
clang-r404259/: AndroidVersion.txt  manifest_6917795.xml  manifest_6923445.xml  manifest_6936778.xml
clang-r407598/: manifest_7016462.xml  manifest_7023706.xml  manifest_7027233.xml  manifest_7034760.xml
clang-r412851/: manifest_7120520.xml  manifest_7125619.xml
clang-r416183/: AndroidVersion.txt  manifest_7191967.xml  manifest_7196503.xml
clang-r416183c/: manifest_7405823.xml
clang-r428724/: AndroidVersion.txt  clang_source_info.md  manifest_7481113.xml  manifest_7489081.xml  manifest_7545602.xml  manifest_7555107.xml  manifest_7607007.xml
clang-r437112/: clang_source_info.md  manifest_7863072.xml  manifest_7893921.xml  manifest_8011667.xml  manifest_8017014.xml
clang-r437112b/: clang_source_info.md  manifest_8043631.xml  manifest_8051348.xml
clang-r445002/: AndroidVersion.txt  clang_source_info.md  manifest_8123713.xml  manifest_8148192.xml
clang-r450784/: AndroidVersion.txt  clang_source_info.md  manifest_8300710.xml  manifest_8347023.xml
clang-r450784d/: BUILD.bazel
clang-r450784e/: BUILD.bazel
clang-r458507/: BUILD.bazel
clang-r458508/: AndroidVersion.txt  clang_source_info.md  manifest_P38182459.xml
clang-r459607/: AndroidVersion.txt  clang_source_info.md  manifest_P38180214.xml
clang-r460955/: AndroidVersion.txt  clang_source_info.md  manifest_P38245620.xml
clang-r461377/: AndroidVersion.txt  clang_source_info.md  manifest_P38243335.xml
clang-r468909/: clang_source_info.md  manifest_9047722.xml  manifest_9094797.xml  manifest_9100725.xml  manifest_P38351372.xml  manifest_P38605073.xml  manifest_P38678659.xml  manifest_P38921524.xml  manifest_P39075858.xml  manifest_P39138202.xml  manifest_P41244376.xml
clang-r468909b/: BUILD.bazel  clang_source_info.md  manifest_9134221.xml
clang-r469901/: AndroidVersion.txt  clang_source_info.md
clang-r470762/: AndroidVersion.txt  clang_source_info.md
clang-r475365/: clang_source_info.md  manifest_9292270.xml
clang-r475365b/: BUILD.bazel
clang-r487747c/: BUILD.bazel  clang_source_info.md  manifest_10226160.xml
clang-r487747c/include/clang/Sema/: Sema.h
clang-r487747c/lib/: libxml2.so.2
clang-r487747c/lib/cmake/clang/: ClangTargets-release.cmake
clang-r487747c/lib/cmake/llvm/: LLVMExports-release.cmake
clang-r498229/: clang_source_info.md  manifest_10273611.xml
clang-r498229b/: BUILD.bazel
clang-r510928/: BUILD.bazel  BUILD_INFO  clang_source_info.md  manifest_11163443.xml  manifest_11199095.xml  manifest_11341538.xml  manifest_11358684.xml
clang-r522817/: BUILD_INFO  clang_source_info.md  manifest_11490625.xml
clang-r530567/: BUILD_INFO  clang_source_info.md  manifest_11999726.xml
clang-stable/: README.md
docs/: build_performance.md  mlgo.md
kleaf/: BUILD.bazel  OWNERS  README.md  android.bzl  android_arm64.bzl  architecture_constants.bzl  cc_toolchain_config.bzl  clang_config.bzl  clang_toolchain.bzl  clang_toolchain_repository.bzl  common.bzl  custom_clang_repository.bzl  empty_toolchain.bzl  linux.bzl  register.bzl  toolchains.bazelrc  update_parent.sh  user_clang_toolchain_repository.bzl  user_toolchains.bazelrc  versions.bzl
kleaf/cc_toolchain_redirect/: cc_toolchain_redirect.sh  llvm-nm
kleaf/parent/: clang-r475365
llvm-binutils-stable/: llvm-addr2line  llvm-ar  llvm-as  llvm-cov  llvm-cxxfilt  llvm-dis  llvm-dwarfdump  llvm-link  llvm-modextract  llvm-nm  llvm-objcopy  llvm-objdump  llvm-profdata  llvm-ranlib  llvm-readelf  llvm-readobj  llvm-size  (+3 more)
(+805 files in other folders)
