# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

"""
Toolchain config
"""

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@env//:env.bzl", "env")
load("//build/bazel/toolchains/clang/host/linux-x86:cc_toolchain_config.bzl", "clang_version_info")
load("//build/bazel/toolchains/clang/host/linux-x86:cc_toolchain_constants.bzl", "generated_config_constants")
load("//build/bazel/platforms/arch/variants:constants.bzl", _arch_constants = "constants")

filegroup(name = "empty")

# Different clang versions are configured here.
clang_version_info(
    name = "clang",
    clang_files = glob(["**/*"]),
    clang_short_version = "//prebuilts/clang/host/linux-x86:clang_short_version",
    clang_version = "//prebuilts/clang/host/linux-x86:clang_version",
)

string_flag(
    name = "clang_version",
    build_setting_default = env.get(
        "LLVM_PREBUILTS_VERSION",
        generated_config_constants.CLANG_DEFAULT_VERSION,
    ),
)

string_flag(
    name = "clang_short_version",
    build_setting_default = env.get(
        "LLVM_RELEASE_VERSION",
        generated_config_constants.CLANG_DEFAULT_SHORT_VERSION,
    ),
)
