load("@kernel_toolchain_info//:dict.bzl", "CLANG_VERSION")
load(":cc_toolchain_config.bzl", "clang_config")

# Technically we can split the binaries into those for compiler, linker
# etc., but since these binaries are usually updated together, it is okay
# to use a superset here.
filegroup(
    name = "clang_bin",
    srcs = [
        "//prebuilts/clang/host/linux-x86/kleaf/parent/clang-{}:binaries".format(CLANG_VERSION),
    ],
)

filegroup(
    name = "linux_x86_64_compiler_files",
    srcs = [
        ":clang_bin",
        "//build/kernel:sysroot",
        "//prebuilts/clang/host/linux-x86/kleaf/parent/clang-{}:includes".format(CLANG_VERSION),
    ],
)

filegroup(
    name = "linux_x86_64_linker_files",
    srcs = [
        ":clang_bin",
        "//build/kernel:sysroot",
        "//prebuilts/kernel-build-tools:linux-x86-libs",
    ],
)

filegroup(
    name = "linux_x86_64_all_files",
    srcs = [
        ":clang_bin",
        ":linux_x86_64_compiler_files",
        ":linux_x86_64_linker_files",
    ],
)

# CC: linux x86_64

toolchain(
    name = "linux_x86_64_clang_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":linux_x86_64_clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "linux_x86_64_clang",
    all_files = ":linux_x86_64_all_files",
    ar_files = ":clang_bin",
    compiler_files = ":linux_x86_64_compiler_files",
    dwp_files = ":clang_bin",
    linker_files = ":linux_x86_64_linker_files",
    objcopy_files = ":clang_bin",
    strip_files = ":clang_bin",
    supports_param_files = False,
    toolchain_config = ":linux_x86_64_toolchain_config",
    toolchain_identifier = "linux_x86_64_clang_id",
)

clang_config(
    name = "linux_x86_64_toolchain_config",
    clang_version = CLANG_VERSION,
    target_cpu = "x86_64",
    target_os = "linux",
    toolchain_identifier = "linux_x86_64_clang_id",
)
