# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@kernel_toolchain_info//:dict.bzl", "CLANG_VERSION")
load(":cc_toolchain_config.bzl", "clang_config")

# From _setup_env.sh
# sysroot_flags+="--sysroot=${ROOT_DIR}/build/kernel/build-tools/sysroot "
_LINUX_SYSROOT = dict(
    label = "//build/kernel:sysroot",
    path = "build/kernel/build-tools/sysroot",
)

# --sysroot=${NDK_DIR}/toolchains/llvm/prebuilt/linux-x86_64/sysroot
_ANDROID_SYSROOT = dict(
    label = "@prebuilt_ndk//:sysroot",
    path = "external/prebuilt_ndk/toolchains/llvm/prebuilt/linux-x86_64/sysroot",
)

# FIXME load from build configs
_ANDROID_ARM64_NDK_TRIPLE = "aarch64-linux-android31"

# FIXME load from build configs
_ANDROID_X86_64_NDK_TRIPLE = "x86_64-linux-android31"

# Technically we can split the binaries into those for compiler, linker
# etc., but since these binaries are usually updated together, it is okay
# to use a superset here.
filegroup(
    name = "clang_bin",
    srcs = [
        "//prebuilts/clang/host/linux-x86/kleaf/parent/clang-{}:binaries".format(CLANG_VERSION),
    ],
)

# CC: linux x86_64

filegroup(
    name = "linux_x86_64_compiler_files",
    srcs = [
        ":clang_bin",
        _LINUX_SYSROOT["label"],
        "//prebuilts/clang/host/linux-x86/kleaf/parent/clang-{}:includes".format(CLANG_VERSION),
    ],
)

filegroup(
    name = "linux_x86_64_linker_files",
    srcs = [
        ":clang_bin",
        _LINUX_SYSROOT["label"],
        "//prebuilts/kernel-build-tools:linux-x86-libs",
    ],
)

filegroup(
    name = "linux_x86_64_all_files",
    srcs = [
        ":clang_bin",
        ":linux_x86_64_compiler_files",
        ":linux_x86_64_linker_files",
    ],
)

toolchain(
    name = "linux_x86_64_clang_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":linux_x86_64_clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "linux_x86_64_clang",
    all_files = ":linux_x86_64_all_files",
    ar_files = ":clang_bin",
    compiler_files = ":linux_x86_64_compiler_files",
    dwp_files = ":clang_bin",
    linker_files = ":linux_x86_64_linker_files",
    objcopy_files = ":clang_bin",
    strip_files = ":clang_bin",
    supports_param_files = False,
    toolchain_config = ":linux_x86_64_toolchain_config",
    toolchain_identifier = "linux_x86_64_clang_id",
)

clang_config(
    name = "linux_x86_64_toolchain_config",
    clang_version = CLANG_VERSION,
    sysroot = _LINUX_SYSROOT["path"],
    target_cpu = "x86_64",
    target_os = "linux",
    toolchain_identifier = "linux_x86_64_clang_id",
)

## CC: android arm64

filegroup(
    name = "android_compiler_files",
    srcs = [
        ":clang_bin",
        _ANDROID_SYSROOT["label"],
        "//prebuilts/clang/host/linux-x86/kleaf/parent/clang-{}:includes".format(CLANG_VERSION),
    ],
)

filegroup(
    name = "android_linker_files",
    srcs = [
        ":clang_bin",
        _ANDROID_SYSROOT["label"],
    ],
)

filegroup(
    name = "android_all_files",
    srcs = [
        ":android_compiler_files",
        ":android_linker_files",
        ":clang_bin",
    ],
)

toolchain(
    name = "android_arm64_clang_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:android",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":android_arm64_clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "android_arm64_clang",
    all_files = ":android_all_files",
    ar_files = ":clang_bin",
    compiler_files = ":android_compiler_files",
    dwp_files = ":clang_bin",
    linker_files = ":android_linker_files",
    objcopy_files = ":clang_bin",
    strip_files = ":clang_bin",
    supports_param_files = False,
    toolchain_config = ":android_arm64_toolchain_config",
    toolchain_identifier = "android_arm64_clang_id",
)

clang_config(
    name = "android_arm64_toolchain_config",
    clang_version = CLANG_VERSION,
    ndk_triple = _ANDROID_ARM64_NDK_TRIPLE,
    sysroot = _ANDROID_SYSROOT["path"],
    target_cpu = "arm64",
    target_os = "android",
    toolchain_identifier = "android_arm64_clang_id",
)

## CC: android x86_64

toolchain(
    name = "android_x86_64_clang_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:android",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":android_x86_64_clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "android_x86_64_clang",
    all_files = ":android_all_files",
    ar_files = ":clang_bin",
    compiler_files = ":android_compiler_files",
    dwp_files = ":clang_bin",
    linker_files = ":android_linker_files",
    objcopy_files = ":clang_bin",
    strip_files = ":clang_bin",
    supports_param_files = False,
    toolchain_config = ":android_x86_64_toolchain_config",
    toolchain_identifier = "android_x86_64_clang_id",
)

clang_config(
    name = "android_x86_64_toolchain_config",
    clang_version = CLANG_VERSION,
    ndk_triple = _ANDROID_X86_64_NDK_TRIPLE,
    sysroot = _ANDROID_SYSROOT["path"],
    target_cpu = "x86_64",
    target_os = "android",
    toolchain_identifier = "android_x86_64_clang_id",
)

## CC: android riscv64

filegroup(
    name = "android_riscv64_compiler_files",
    srcs = [
        ":clang_bin",
        "//prebuilts/clang/host/linux-x86/kleaf/parent/clang-{}:includes".format(CLANG_VERSION),
    ],
)

filegroup(
    name = "android_riscv64_linker_files",
    srcs = [
        ":clang_bin",
    ],
)

filegroup(
    name = "android_riscv64_all_files",
    srcs = [
        ":android_riscv64_compiler_files",
        ":android_riscv64_linker_files",
        ":clang_bin",
    ],
)

toolchain(
    name = "android_riscv64_clang_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:android",
        "@platforms//cpu:riscv64",
    ],
    toolchain = ":android_riscv64_clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "android_riscv64_clang",
    all_files = ":android_riscv64_all_files",
    ar_files = ":clang_bin",
    compiler_files = ":android_riscv64_compiler_files",
    dwp_files = ":clang_bin",
    linker_files = ":android_riscv64_linker_files",
    objcopy_files = ":clang_bin",
    strip_files = ":clang_bin",
    supports_param_files = False,
    toolchain_config = ":android_riscv64_toolchain_config",
    toolchain_identifier = "android_riscv64_clang_id",
)

clang_config(
    name = "android_riscv64_toolchain_config",
    clang_version = CLANG_VERSION,
    # TODO(b/228238975): We need NDK_TRIPLE for riscv
    ndk_triple = None,  # We haven't set NDK_TRIPLE for riscv yet.
    sysroot = "/dev/null",  # We haven't set NDK_TRIPLE for riscv yet.
    target_cpu = "riscv64",
    target_os = "android",
    toolchain_identifier = "android_riscv64_clang_id",
)
